# taproot

./: .gitignore  CMakeLists.txt  README.md  gradle.properties  settings.gradle
docs/: howto-query-with-duckdb.md  howto-query-with-fastbit.md  howto-query-with-trino.md
index-builder/: CMakeLists.txt
index-builder/src/: fastbit-builder.cpp
mfem-utils/: CMakeLists.txt  build.gradle
mfem-utils/src/main/cpp/: mfem-mesh-reader.cpp  mfem2parquet.cpp
mfem-utils/src/main/public/: mfem-mesh-reader.h
mfem-utils/src/test/cpp/: mfem-mesh-reader-test.cpp
sci-lucene/: build.gradle
sci-lucene/src/main/java/sci/lucene/: IndexedMesh.java
sci-lucene/src/main/java/sci/mfem/: LaghosMeshReader.java  MFEMMeshReader.java  MFEMUtils.java
sci-lucene/src/test/java/sci/mfem/: LaghosMeshReaderTest.java  LibraryTest.java
